--- a/stylesheets/index-stylesheets.css
+++ b/stylesheets/index-stylesheets.css
@@ -1,6 +1,6 @@
 * {
   background-color: #ffffff;
-  font-size: 16px;
+  font-size: 18px;
   background-image:url("https://raw.githubusercontent.com/sarahikeda/sarahikeda.github.io/master/stylesheets/wet_snow.png");
   font-family: 'Raleway'
 }
@@ -9,6 +9,7 @@ img {
   border-radius: 25px;
   display: inline;
   margin-right: 80;
+  width: 130px;
 }
 
 .header p {
@@ -21,9 +22,9 @@ img {
   padding: 1px;
 }
 
-.all {
+/*.all {
   margin:0 auto;
-}
+}*/
 
 .about {
   float: left;
@@ -31,7 +32,7 @@ img {
   /* display: inline-block;*/
   max-width: 80%;
   margin-left: 100px;
-  border: 1px dashed black;
+  /*border: 1px dashed black;*/
   padding: 10px;
   padding-right: 40px;
 }
@@ -56,11 +57,12 @@ p {
 }
 
 .suggestion {
-  float: right;
-  margin-top: 100px;
-  border: 4px solid black;
+  position: relative;
+  margin-top: 80px;
+  margin-left: 240px;
+  /*border: 4px solid black;*/
   padding: 10px 20px;
-
+  display: inline-block;
 }
 
 .suggestion li {
@@ -68,7 +70,7 @@ p {
   text-decoration: none;
 }
 .footer {
-  border: 4px solid black;
+  border-top: 4px solid black;
   margin-top:500px;
   margin-bottom:20px;
   height: 60px;
