--- a/stylesheets/index-stylesheets.css
+++ b/stylesheets/index-stylesheets.css
@@ -1,8 +1,8 @@
 * {
   background-color: #ffffff;
   font-size: 18px;
-  background-image:url("https://raw.githubusercontent.com/sarahikeda/sarahikeda.github.io/master/stylesheets/wet_snow.png");
-  font-family: 'Raleway'
+
+  font-family: 'Roboto Slab'
 }
 
 img {
