--- a/stylesheets/blog-index-stylesheets.css
+++ b/stylesheets/blog-index-stylesheets.css
@@ -1,14 +1,16 @@
 * {
   background-color: #ffffff;
   /*font-size: 20px;*/
-  background-image:url("https://raw.githubusercontent.com/sarahikeda/sarahikeda.github.io/master/stylesheets/wet_snow.png");
-  font-family: 'Raleway'
+  /*background-image:url("https://raw.githubusercontent.com/sarahikeda/sarahikeda.github.io/master/stylesheets/wet_snow.png");*/
+  font-family: 'RobotoSlab'
+  opacity: 0.05;
 }
 
-img {
-  border-radius: 25px;
-  display: inline;
+.about img {
+  border-radius: 100px;
   margin-right: 80;
+  height: 250px;
+  width: 250px;
 }
 
 .header p {
@@ -28,7 +30,6 @@ img {
   max-width: 20%;
   margin-top: 0px;
   margin-left: 80%;
-  border: 2px dashed black;
   padding: 10px;
 }
 
@@ -42,6 +43,11 @@ img {
   display: inline-block;
   margin-left: 80px;
   margin-bottom: 10px;
+}
+
+.suggestion li {
+  list-style-type: none;
+  text-decoration: none;
 }
 
 .recent {
@@ -71,7 +77,7 @@ p {
   text-decoration: none;
 }
 .footer {
-  border: 4px solid black;
+  border-top: 4px solid black;
   margin-top:500px;
   margin-bottom:20px;
   height: 60px;
@@ -79,7 +85,12 @@ p {
 }
 
 .footer li {
-  text-decoration: none;
-  display: inline-block;
   float: right;
+}
+
+#linkedin img {
+  height:30px;
+  width: 38px;
+  float: left;
+  margin: 0 10px 20px 0;
 }
