--- a/stylesheets/overhaul-index-stylesheets.css
+++ b/stylesheets/overhaul-index-stylesheets.css
@@ -60,37 +60,32 @@
 
 .suggestion {
   position: absolute;
-  top: 390px;
+  top: 300px;
   /*border: 4px solid black;*/
   padding: 10px 20px;
-  right: 50px;
+  right: 40px;
+  width: 250px;
 }
 
 .suggestion li {
   list-style-type: none;
-
-}
-
-.suggestion li a {
-  text-decoration: none;
   color: black;
-  font-size:14px;
-}
-.footer {
-  border-top: 4px solid black;
-  margin-top:500px;
-  margin-bottom:20px;
-  height: 60px;
-  /*margin-right: 160px ;*/
+  font-size:18px;
+  padding: 2px 0px 2px 10px;
 }
 
-.footer li {
-  float: right;
+
+.footer  {
+  position: absolute;
+  margin-top: 350px;
+  margin-bottom: 5px;
+  margin-left: 30px;
+  border-top: 1px solid black;
+  width: 97%;
 }
 
 #linkedin img {
-  height:24px;
-  width: 28px;
-  margin-right: 8px;
+  height:30px;
+  width: 36px;
   opacity: 0.8;
 }
