--- a/stylesheets/blog-stylesheetst3.css
+++ b/stylesheets/blog-stylesheetst3.css
@@ -2,6 +2,7 @@
   background-color: #F44D4D;
   /*font-size: 20px;*/
   font-family: 'Roboto Slab'
+
 }
 
 .about img {
@@ -82,14 +83,17 @@ p {
 
 .footer {
   border-top: 4px solid black;
-  margin-top:550px;
-  margin-bottom:20px;
+  position:relative;
+  top:1800px;
   height: 60px;
+  text-decoration: none;
   /*margin-right: 160px ;*/
 }
 
 .footer li {
   float: right;
+  text-decoration: none;
+  list-style: none;
 }
 
 #linkedin img {
