change link color and add footer

--- a/stylesheets/blog-stylesheetsc3.css
+++ b/stylesheets/blog-stylesheetsc3.css
@@ -4,6 +4,13 @@
   font-family: 'Roboto Slab'
 }
 
+a {
+  color: black;
+}
+
+p {
+  font-size: 16px;
+}
 .about img {
   border-radius: 100px;
   margin-right: 80px;
@@ -69,28 +76,32 @@ p {
    color: black;
    font-size: 22px;
 }
-.suggestion li {
-  text-decoration: none;
+.suggestion  {
+  position: absolute;
+  right: 40px;
+
 }
 .suggestion li a{
   list-style-type: none;
   text-decoration: none;
-  font-color: #F0624D;
+  color: black;
   font-size: 14px;
 }
 
+
 .footer {
   border-top: 4px solid black;
-  /*margin-top:550px;
-  margin-bottom:20px;*/
-  height: 60px;
   position: absolute;
-  bottom: 0px;
-  /*margin-right: 160px ;*/
+  width: 100%;
+  top:1500px;
+  text-decoration: none;
+
 }
 
 .footer li {
   float: right;
+  text-decoration: none;
+  list-style: none
 }
 
 #linkedin img {
