--- a/stylesheets/blog-stylesheetsc6.css
+++ b/stylesheets/blog-stylesheetsc6.css
@@ -45,6 +45,11 @@
   margin-bottom: 100px;
   }
 
+  .entry ul {
+    text-align: center;
+    list-style-type: none;
+  }
+
 .entry p {
   max-width: 800px;
   font-size: 16px;
