--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,30 +1,55 @@
 * {
 
   /*font-size: 20px;*/
-  /*background-image:url("https://raw.githubusercontent.com/sarahikeda/sarahikeda.github.io/master/stylesheets/wet_snow.png");*/
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
 
-.header p {
+
+#name {
   font-size: 40px;
-
+  margin-top: 10px;
   margin-left: 30px;
-  margin-top: 30px;
-  border-bottom: 1px solid black;
-  padding: 1px;
+  float: left;
 }
 
 
-.jumbotron {
-  max-width: 60%;
-  margin-left: 10px;
+
+#navright {
+  margin-top: 20px;
+  font-size: 20px;
+  float: right;
+  list-style-type: none;
+
+  margin-top: 20px;
+  margin-right: 100px;
 }
 
-.jumbotron p {
+#navright li {
+  display: inline;
+}
+
+.bio {
   max-width: 80%;
-  padding: 20px;
+  font-size: 40px;
+  margin-top: 100px;
+  /*margin-left: 10px;*/
+  float: left;
+  /*display: inline;*/
 }
 
+#biopic {
+  margin-left: 0px;
+  padding-top: 40px;
+  padding-right: 10px;
+  max-height: 350px;
+  max-width: 200px;
+  border-radius: 100%;
+  float: left;
+  display: inline-block;
+}
 
-
+.interests {
+  font-size: 30px;
+  display: inline-block;
+}
