--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -48,8 +48,10 @@
 }
 
 #projects {
+  margin-left: 10px;
   display: block;
   font-size: 20px;
+  max-width: 75%;
 }
 .interests {
   font-size: 30px;
