--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,4 +1,10 @@
 * {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   font-family: 'Open Sans Condensed', sans-serif;
 
 }
@@ -12,6 +18,12 @@
   margin-top: 0px;
   margin-left: 30px;
   float: left;
+}
+
+#name:hover { transform: scale(2.0); }
+
+.break {
+  height: 100px;
 }
 
 #navright {
@@ -53,12 +65,16 @@
   font-size: 20px;
   max-width: 75%;
 }
-.interests {
+#interests {
   font-size: 30px;
   display: inline-block;
 }
 
 #insession {
+  margin-left: 20px;
   max-height: 650px;
   max-width: 400px;
 }
+
+#insession:hover { transform: scale(1.5); }
+
