--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -10,6 +10,11 @@
   margin-top: 0px;
   margin-left: 30px;
   float: left;
+
+}
+#name a {
+  color: black;
+  text-decoration: none;
 }
 
 #name:hover { transform: scale(2.0); }
