--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -3,25 +3,25 @@
 }
 
 
-#name {
+.name {
   font-size: 40px;
   margin-top: 0px;
   margin-left: 30px;
   float: left;
 
 }
-#name a {
+.name a {
   color: black;
   text-decoration: none;
 }
 
-#name:hover { transform: scale(2.0); }
+.name:hover { transform: scale(2.0); }
 
 .break {
   height: 100px;
 }
 
-#navright {
+.navright {
   margin-top: 20px;
   font-size: 20px;
   float: right;
@@ -30,7 +30,7 @@
   margin-right: 60px;
 }
 
-#navright li {
+.navright li {
   display: inline;
   padding-left: 10px;
 }
@@ -42,7 +42,7 @@
   margin-left: 60px;
 }
 
-#biopic {
+.biopic {
   margin-left: 0px;
   padding-top: 40px;
   padding-right: 10px;
@@ -53,27 +53,42 @@
   display: inline-block;
 }
 
-#projects {
-  margin-left: 10px;
-  display: block;
+.projects-one {
+  display: inline-block;
   font-size: 20px;
-  max-width: 75%;
+  max-width: 40%;
 }
-#interests {
+
+.projects-two {
+  float: right;
+  font-size: 20px;
+  max-width: 40%;
+}
+
+
+.interests {
   font-size: 30px;
   display: inline-block;
 }
 
-#insession {
-  margin-left: 200px;
-  max-height: 650px;
-  max-width: 400px;
+.insession {
+  /*margin-left: 200px;*/
+  /*max-height: 650px;*/
+  /*max-width: 400px;*/
+  max-height: 90%;
+  max-width: 90%;
 }
 
-#insession:hover { transform: scale(2.0); }
+.insession:hover { transform: scale(2.0); }
 
+.potluck {
+  max-height: 90%;
+  max-width: 90%;
+}
 
-#contact {
+.potluck:hover { transform: scale(2.0); }
+
+.contact {
   text-align:center;
   margin-bottom: 10px;
 }
