--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -2,14 +2,17 @@
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
+a {
+  color: black !important;
+}
 .name {
   font-size: 40px;
   margin-top: 0px;
   margin-left: 30px;
   float: left;
 }
-.name a {
-  color: black;
+
+.name a:hover {
   text-decoration: none;
 }
 
@@ -61,7 +64,6 @@
 }
 
 .inspire a {
-  color: black;
   text-decoration: none;
 }
 
@@ -90,6 +92,12 @@
 
 .oneus:hover { transform: scale(2.0); opacity: 0.05; }
 
+.oneus a:hover {
+  transform: scale(2.0);
+  opacity: 0.05;
+  text-decoration: none;
+}
+
 .insession {
   max-height: 90%;
   max-width: 90%;
@@ -116,6 +124,5 @@ font-size: 20px;
 }
 
 #blog a {
-  color: black;
   text-decoration: none;
 }
