--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -73,46 +73,33 @@ a {
   text-decoration: none;
 }
 
-.project {
+.projects {
   min-height: 100vh;
+  font-size: 20px;
 }
+
 .projects-one {
   margin-left: 100px;
-  font-size: 20px;
-  max-width: 70%;
+  max-width: 80vh;
 }
 
 .projects-two {
   display: inline-block;
-  font-size: 20px;
-  max-width: 40%;
-}
-
-.projects-three {
-  float: right;
-  font-size: 20px;
-  max-width: 40%;
-}
-
-.oneus {
-  max-height: 90%;
-  max-width: 40%;
-}
-
-.oneus:hover { transform: scale(2.0); opacity: 0.05; }
-
-.oneus a:hover {
-  transform: scale(1.5);
-  opacity: 0.05;
-  text-decoration: none;
+  max-width: 50vh;
 }
 
 .insession {
   max-height: 90%;
-  max-width: 90%;
+  max-width: 50vh;
 }
 
 .insession:hover { transform: scale(1.2); }
+
+.projects-three {
+  float: right;
+  font-size: 20px;
+  max-width: 50vh;
+}
 
 .potluck {
   max-height: 90%;
