--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -6,18 +6,13 @@ a {
   color: black !important;
 }
 
-.name {
+.name, .name a {
   font-size: 40px;
   margin-top: 0px;
   margin-left: 30px;
   float: left;
-}
-
-.name a:hover {
   text-decoration: none;
 }
-
-.name:hover { transform: scale(2.0); }
 
 .break {
   height: 150px;
@@ -109,24 +104,3 @@ a {
 }
 
 .potluck:hover { transform: scale(1.2); }
-
-.contact {
-  text-align:center;
-  margin-bottom: 10px;
-}
-
-.blog {
-  font-size: 20px;
-  min-height: 100vh;
-  margin-top: 200px;
-  text-align: center;
-}
-
-.blog li {
-  list-style-type: none;
-
-}
-
-.blog li a {
-  text-decoration: none;
-}
