Fix github username and revert to my own

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -34,7 +34,7 @@ a {
 
 .bio {
   min-height: 100vh;
-  max-width: 80%;
+  max-width: 80vh;
   font-size: 40px;
   margin-top: 100px;
   margin-left: 60px;
