--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -39,6 +39,12 @@ a {
   padding-left: 20px;
 }
 
+@media all and (max-width: 500px) {
+  #contact {
+    padding-left: 10px;
+  }
+}
+
 .main-info {
   margin-top: 100px;
 }
