--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,5 +1,5 @@
-* {
-  font-family: 'Open Sans Condensed', sans-serif;
+body {
+  font-family: 'Open Sans Condensed', sans-serif !important;
 }
 
 a {
