--- a/stylesheets/irp.css
+++ b/stylesheets/irp.css
@@ -48,11 +48,11 @@ body {
   100% {background: red;}
 }
 
-/*@-webkit-keyframes colorchange /* Safari and Chrome - necessary duplicate */
+@-webkit-keyframes colorchange /* Safari and Chrome - necessary duplicate */
 {
-  /*0%   {background: red;}
+  0%   {background: red;}
   25%  {background: yellow;}
   50%  {background: blue;}
   75%  {background: green;}
-  100% {background: red;}*/
-}*/
+  100% {background: red;}
+}
