Add icon for arrow

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -35,6 +35,10 @@ a {
   padding-left: 10px;
 }
 
+#arrow {
+  max-width: 4vh;
+}
+
 #contact {
   padding-left: 20px;
 }
@@ -101,14 +105,19 @@ a {
 }
 
 .projects-left {
-  float: left;
-  max-width: 35vh;
+  width: 50vh;
+  height: 40vh;
+  display: inline-block;
+  border: 2px black solid;
+  padding: 10px;
 }
 
 .projects-right {
-  float: right;
-  padding-left: 40px !important;
-  max-width: 50vh;
+  width: 50vh;
+  height: 40vh;
+  display: inline-block;
+  border: 2px black solid;
+  padding: 10px;
 }
 
 .insession {
@@ -118,10 +127,9 @@ a {
 .insession:hover { transform: scale(1.1); }
 
 .potluck {
-  max-height: 90%;
+  max-height: 95%;
   max-width: 100%;
-  border: 1px black solid;
-  padding: 2px;
+  /*padding: 2px;*/
 }
 
 .potluck:hover { transform: scale(1.1); }
@@ -132,10 +140,3 @@ a {
 }
 
 .decisions:hover { transform: scale(1.1); }
-
-.oneus {
-  max-height: 90%;
-  max-width: 100%;
-}
-
-.oneus:hover { transform: scale(1.1); }
