--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -26,8 +26,8 @@ a {
   float: right;
   list-style-type: none;
   position: absolute;
-  top: 8%;
-  left: 70%;
+  top: 6%;
+  left: 55%;
 }
 
 .navright li {
@@ -65,8 +65,8 @@ a {
 #biopic {
   padding-right: 60px;
   max-height: 45vh;
-  max-width: 45vh;
-  border-radius: 100%;
+  max-width: 50%;
+  border-radius: 90%;
   float: left;
   display: inline-block;
 }
