Add about me page, removing ajax

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -60,6 +60,7 @@ a {
   left: 20%;
   top: 25%;
   padding-right: 60px;
+  font-family: 'Open Sans Condensed', sans-serif !important;
 }
 
 #biopic {
