--- a/dreamswim/css/landing-page.css
+++ b/dreamswim/css/landing-page.css
@@ -18,7 +18,6 @@ h4,
 h5,
 h6 {
     font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
 }
 
 .lead {
@@ -43,7 +42,7 @@ h6 {
 
 .intro-message > h1 {
     margin: 0;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    color: white;
     font-size: 5em;
 }
 
@@ -53,9 +52,6 @@ h6 {
     border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 
-.intro-message > h3 {
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-}
 
 @media(max-width:767px) {
     .intro-message {
