--- a/dreamswim/_includes/footer.html
+++ b/dreamswim/_includes/footer.html
@@ -15,12 +15,12 @@
                     <li>
                         <a href="#services">Services</a>
                     </li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li>
+                    <li class="footer-menu-divider"></li>
+                    <!-- <li>
                         <a href="#contact">Contact</a>
-                    </li>
+                    </li> -->
                 </ul>
-                <p class="copyright text-muted small">{{ site.copyright }}</p>
+                <p class="copyright text-muted small">Designed with love by H2oh.</p>
             </div>
             <div class="col-md-4">
                 {{ site.credits }}
