--- a/emotional-hotspot/index.css
+++ b/emotional-hotspot/index.css
@@ -1,98 +1,135 @@
-/* Always set the map height explicitly to define the size of the div
- * element that contains the map. */
-#map {
-  height: 100%;
-}
+  /* Always set the map height explicitly to define the size of the div
+   * element that contains the map. */
+  #map {
+    height: 100%;
+  }
+  /* Optional: Makes the sample page fill the window. */
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
 
-* {
-  font-family: 'Open Sans', sans-serif;
-}
-/* Optional: Makes the sample page fill the window. */
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
+  #floating-panel {
+    position: absolute;
+    top: 10px;
+    left: 25%;
+    z-index: 5;
+    background-color: #fff;
+    padding: 5px;
+    border: 1px solid #999;
+    text-align: center;
+    font-family: 'Roboto','sans-serif';
+    line-height: 30px;
+    padding-left: 10px;
+  }
+  #floating-panel {
+    background-color: #fff;
+    border: 1px solid #999;
+    left: 25%;
+    padding: 5px;
+    position: absolute;
+    top: 10px;
+    z-index: 5;
+  }
 
-#hotspot-header {
-  margin-top: 10px;
-  text-align: center;
-}
-#hotspot-description {
-  text-align: center;
-}
+  /* Always set the map height explicitly to define the size of the div
+   * element that contains the map. */
+  #map {
+    height: 100%;
+  }
 
-#infowindow-content .title {
-  font-weight: bold;
-}
+  * {
+    font-family: 'Open Sans', sans-serif;
+  }
+  /* Optional: Makes the sample page fill the window. */
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
 
-#infowindow-content {
-  display: none;
-}
+  #hotspot-header {
+    margin-top: 40px;
+    margin-bottom: 20px;
+    text-align: center;
+  }
 
-#map #infowindow-content {
-  display: inline;
-}
+  #hotspot-description {
+    text-align: center;
+  }
 
-.pac-card {
-  margin: 10px 10px 0 0;
-  border-radius: 2px 0 0 2px;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  outline: none;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-  background-color: #fff;
-}
+  #infowindow-content .title {
+    font-weight: bold;
+  }
 
-#pac-container {
-  padding-bottom: 12px;
-  margin-right: 12px;
-}
+  #infowindow-content {
+    display: none;
+  }
 
-.pac-controls {
-  display: inline-block;
-  padding: 5px 11px;
-}
+  #map #infowindow-content {
+    display: inline;
+  }
 
-.pac-controls label {
-  font-size: 13px;
-  font-weight: 300;
-}
+  .pac-card {
+    margin: 10px 10px 0 0;
+    border-radius: 2px 0 0 2px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    outline: none;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    background-color: #fff;
+  }
 
-#pac-input {
-  background-color: #fff;
-  font-size: 20px;
-  font-weight: 300;
-  margin: 12px 20px 0 0;
-  padding: 0 11px 0 13px;
-  text-align: center;
-  text-overflow: ellipsis;
-  width: 500px;
-}
+  #pac-container {
+    padding-bottom: 12px;
+    margin-right: 12px;
+  }
 
-#pac-input:focus {
-  border-color: #4d90fe;
-}
+  .pac-controls {
+    display: inline-block;
+    padding: 5px 11px;
+  }
 
-#title {
-  color: #fff;
-  background-color: #4d90fe;
-  font-size: 25px;
-  font-weight: 500;
-  padding: 6px 12px;
-}
+  .pac-controls label {
+    font-size: 13px;
+    font-weight: 300;
+  }
 
-#target {
-  width: 345px;
-}
+  #pac-input {
+    background-color: #fff;
+    font-size: 20px;
+    font-weight: 300;
+    margin: 12px 20px 0 0;
+    padding: 0 11px 0 13px;
+    text-align: center;
+    text-overflow: ellipsis;
+    width: 500px;
+  }
 
-.dropdown {
-  margin-top: 2vh;
-  margin-left: 30vh;
-}
+  #pac-input:focus {
+    border-color: #4d90fe;
+  }
 
-#emotionDropdown {
-  width: 250px;
-  font-size: 20px;
-  margin-bottom: 5px;
-}
+  #title {
+    color: #fff;
+    background-color: #4d90fe;
+    font-size: 25px;
+    font-weight: 500;
+    padding: 6px 12px;
+  }
+
+  #target {
+    width: 345px;
+  }
+
+  .dropdown {
+    margin-top: 2vh;
+    margin-left: 30vh;
+  }
+
+  #emotionDropdown {
+    width: 250px;
+    font-size: 20px;
+    margin-bottom: 5px;
+  }
