--- a/notanothersadlight/index.css
+++ b/notanothersadlight/index.css
@@ -1,10 +1,20 @@
 html, body {
   font-family: 'Open Sans', sans-serif;
   height: 100%;
-  margin: 10%;
+  margin: 5%;
   padding: 0;
 }
 
 .portfolio-stream img{
-  width: 80%;
+  margin: 20px 0 0 60px;
+  width: 70%;
+}
+
+#lamp-vid {
+  margin-left: 60px;
+}
+
+#creative50{
+  margin: 20px 0 50px 0;
+  width: 30%;
 }
