--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -59,18 +59,24 @@ a {
   max-width: 95vh;
   font-size: 4.0vh;
   position: absolute;
-  left: 20%;
+  left: 10%;
   top: 25%;
   padding-right: 60px;
   font-family: 'Open Sans Condensed', sans-serif !important;
 }
 
 #biopic {
-  padding-right: 60px;
-  max-height: 45vh;
-  max-width: 50%;
-  border-radius: 90%;
+  margin: 10px 30px 0 0;
+  max-height: 30vh;
+  max-width: 30%;
   float: left;
+  display: inline-block;
+}
+
+#biotext {
+  margin-left: 30px;
+  max-width: 60%;
+  font-size: 25px;
   display: inline-block;
 }
 
