--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -21,9 +21,8 @@ a {
   font-size: 20px;
   float: right;
   list-style-type: none;
-  position: absolute;
-  top: 6%;
-  left: 55%;
+  position: relative;
+  margin: 50px 10px 0 0;
 }
 
 .navright li {
@@ -52,28 +51,25 @@ a {
 }
 
 .bio {
-  max-width: 95vh;
-  font-size: 4.0vh;
   position: absolute;
-  left: 10%;
-  top: 25%;
-  padding-right: 60px;
+  top: 30%;
   font-family: 'Open Sans Condensed', sans-serif !important;
 }
 
 #biopic {
-  margin: 10px 30px 0 0;
+  margin: 10px 10px 0 0;
   max-height: 30vh;
-  max-width: 30%;
+  max-width: 22%;
   float: left;
   display: inline-block;
 }
 
 #biotext {
-  margin-left: 30px;
-  max-width: 60%;
-  font-size: 25px;
+  margin: 0 40px 0 20px;
+  max-width: 65%;
+  font-size: 22px;
   display: inline-block;
+  float: right;
 }
 
 .inspire {
