Change font size for portfolio

--- a/stylesheets/code-portfolio.css
+++ b/stylesheets/code-portfolio.css
@@ -4,40 +4,23 @@ a {
 
 .name, .name a {
   font-size: 40px;
-  margin-top: 15px;
+  margin-top: 0px;
   margin-left: 10px;
   float: left;
   text-decoration: none;
 }
 
-.break {
-  height: 150px;
-}
-
-.big-break {
-  min-height: 45vh;
-}
 .navright {
   font-size: 20px;
   float: right;
   list-style-type: none;
   position: relative;
-  margin: 50px 10px 0 0;
+  min-width: 60vh;
+  margin: 50px 20px 0 0;
 }
 
 .navright li {
   display: inline;
-  padding-left: 10px;
-}
-
-.line-break { border-top: 1px dotted #8c8b8b;}
-
-#arrow {
-  max-width: 4vh;
-}
-
-#contact {
-  padding-left: 20px;
 }
 
 @media all and (max-width: 500px) {
@@ -48,103 +31,13 @@ a {
 
 .main-info {
   margin-top: 100px;
+  font-size: .8em;
 }
 
-.bio {
-  position: absolute;
-  top: 30%;
-  font-family: 'Open Sans Condensed', sans-serif !important;
-}
-
-#biopic {
-  margin: 10px 10px 0 0;
-  max-height: 30vh;
-  max-width: 22%;
-  float: left;
-  display: inline-block;
-}
-
-#biotext {
-  margin: 0 40px 0 20px;
-  max-width: 65%;
-  font-size: 22px;
-  display: inline-block;
-  float: right;
-}
-
-.inspire {
-  margin-top: 40px;
-  min-height: 100vh;
-  position: absolute;
-  left: 10%;
-  right: 10%;
-}
-
-.inspire h3{
-  text-align: center;
-}
-
-.inspire li {
-  font-size: 1.5em;
-}
-
-.inspire a {
-  text-decoration: none;
-}
-
-#fist-pump { color: #ff3dc4 }
-
-#halloween {
-  max-height: 40vh;
-  max-width: 40vh;
-  border-radius: 80%;
-  position: absolute;
-  left: 20%;
-}
-
-.social-media {
-  position: relative;
-  margin-left: 50vh;
-  margin-bottom: 20vh;
-}
-
-.social-media li {
-  list-style-type: none;
-}
-
-.social-media-inspire {
-  position: relative;
-  margin-left: 36%;
-  margin-top: 100vh;
-}
-.social-media-inspire li{
-  list-style-type: none;
-}
-
-.media-icons {
-  max-height: 5vh;
-  max-width: 5vh;
-}
 .projects {
   min-height: 100vh;
-  font-size: 15px;
+  font-size: 10em;
   padding: 40px;
-}
-
-.projects-left {
-  width: 50vh;
-  height: 40vh;
-  display: inline-block;
-  border: 2px black solid;
-  padding: 10px;
-}
-
-.projects-right {
-  width: 50vh;
-  height: 40vh;
-  display: inline-block;
-  border: 2px black solid;
-  padding: 10px;
 }
 
 .insession {
