--- a/stylesheets/code-portfolio.css
+++ b/stylesheets/code-portfolio.css
@@ -29,6 +29,15 @@ a {
   }
 }
 
+video {
+  width: 90%;
+  padding-bottom: 10px;
+}
+
+img {
+  padding-bottom: 10px;
+}
+
 .main-info {
   margin-top: 100px;
   font-size: .8em;
@@ -49,7 +58,6 @@ a {
 .potluck {
   max-height: 95%;
   max-width: 100%;
-  /*padding: 2px;*/
 }
 
 .potluck:hover { transform: scale(1.1); }
