Change margins, add header, and put video on top

--- a/notanothersadlight/index.css
+++ b/notanothersadlight/index.css
@@ -1,7 +1,7 @@
 html, body {
   font-family: 'Open Sans', sans-serif;
   height: 100%;
-  margin: 5%;
+  margin: 30px 40px 40px 40px;
   padding: 0;
 }
 
