--- a/notanothersadlight/index.css
+++ b/notanothersadlight/index.css
@@ -1,8 +1,42 @@
 html, body {
   font-family: 'Open Sans', sans-serif;
   height: 100%;
-  margin: 30px 40px 40px 40px;
   padding: 0;
+}
+
+a:link {
+  color: black ;
+}
+
+a:visited {
+  color: #be35ff;
+}
+
+.name a {
+  font-size: 3em;
+  margin-top: 15px;
+  margin-left: 10px;
+  float: left;
+  color: black;
+  text-decoration: none;
+}
+
+
+.navright {
+  font-size: 1em;
+  float: right;
+  list-style-type: none;
+  margin: 20px 20px 0 0;
+}
+
+.navright li {
+  display: inline;
+  padding-left: 10px;
+}
+
+
+.description {
+  margin: 30px 40px 40px 40px;
 }
 
 .portfolio-stream img{
@@ -11,12 +45,12 @@ html, body {
 }
 
 #lamp-vid video {
-  margin: 20px 0 10px 60px;
+  margin: 40px 0 10px 60px;
   width: 80%;
 }
 
 #creative50 {
-  margin: 20px 0 50px 0;
+  margin: 20px 40px 50px 0;
   width: 30%;
   float: right;
 }
