--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -33,16 +33,13 @@ a {
 
 .bio {
   position: absolute;
-  top: 30%;
-  font-family: 'Open Sans Condensed', sans-serif !important;
+  top: 20%;
+  padding-right: 100px;
 }
 
 #biopic {
-  margin: 20px 10px 0 0;
-  max-height: 30vh;
-  max-width: 22%;
-  float: left;
-  display: inline-block;
+  max-height: 50vh;
+  max-width: 100%;
 }
 
 #biotext {
