--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -10,6 +10,7 @@ a {
 
 .name, .name a {
   font-size: 40px;
+  margin-top: -10px;
   margin-left: 10px;
   float: left;
   text-decoration: none;
@@ -24,8 +25,8 @@ a {
   float: right;
   list-style-type: none;
   position: absolute;
-  top: 8%;
-  left: 70%;
+  top: 10%;
+  left: 60%;
   bottom: 10%;
 }
 
@@ -34,24 +35,24 @@ a {
   padding-left: 10px;
 }
 
-.bio {
-  max-width: 95vh;
-  font-size: 4.0vh;
-  position: absolute;
-  left: 20%;
-  padding-bottom: 10%;
+video {
+  width: 100%;
+  padding-bottom: 10px;
+}
+
+.main-info {
+  margin-top: 100px;
+  font-size: .8em;
 }
 
 #headline {
   font-size: 4.0vh;
   text-align: center;
-  position: relative;
 }
 
 #design-projects {
   display: block;
-  margin-top: 100px;
-  position: relative;
+  margin-top: 80px;
 }
 
 .individual-project {
@@ -59,7 +60,7 @@ a {
   width: 50%;
   height: 60%;
   font-size: 1.3em;
-  padding: 40px;
+  padding: 15px;
 }
 
 .write-up {
@@ -69,40 +70,7 @@ a {
 
 .project-img {
   width: 100%;
+  padding-bottom: 10px;
 }
 
 .project-img:hover { transform: scale(1.2); }
-
-.blood-type {
-  width: 40%;
-}
-
-.email-img {
-  margin-top: 10px;
-  position: relative;
-}
-
-#coding-projects { display: block; }
-
-.decisions {
-  max-width: 20vh;
-}
-
-.insession {
-  max-width: 30vh;
-}
-
-.contribution {
-  margin-left: 28%;
-  max-width: 40vh;
-  font-size: 3vh;
-}
-.insession:hover { transform: scale(1.1); }
-
-.potluck {
-  max-height: 95%;
-  max-width: 100%;
-  padding: 2px;
-}
-
-.potluck:hover { transform: scale(1.1); }
