--- a/emotionalhotspot/stylesheets/index.css
+++ b/emotionalhotspot/stylesheets/index.css
@@ -1,8 +1,42 @@
 html, body {
   font-family: 'Open Sans', sans-serif;
-  height: 100%;
+  /*height: 100%;
   margin: 5%;
-  padding: 0;
+  padding: 0;*/
+}
+
+a:link {
+  color: black ;
+}
+
+a:visited {
+  color: #be35ff;
+}
+
+.name a {
+  font-size: 3em;
+  margin-top: 15px;
+  margin-left: 10px;
+  float: left;
+  color: black;
+  text-decoration: none;
+}
+
+.navright {
+  font-size: 1em;
+  float: right;
+  list-style-type: none;
+  margin: 20px 20px 0 0;
+}
+
+.navright li {
+  display: inline;
+  padding-left: 10px;
+}
+
+.description {
+  margin: 30px 40px 40px 40px;
+  display: inline-block;
 }
 
 .portfolio-stream img{
