--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -40,6 +40,8 @@ video {
   padding-bottom: 10px;
 }
 
+video:hover { opacity: 0.3;}
+
 .main-info {
   margin-top: 100px;
   font-size: .8em;
@@ -73,4 +75,4 @@ video {
   padding-bottom: 10px;
 }
 
-.project-img:hover { transform: scale(1.2); }
+.project-img:hover { opacity: 0.3;}
